[package]
name = "tree-sitter-rsf"
description = "Register Specification Format"
version = "0.1.0"
authors = ["Ryan Goodfellow <ry@oxide.computer>"]
license = "MPL-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rsf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/oxidecomputer/tree-sitter-rsf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
