[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-rsf"
description = "Register Specification Format"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "rsf"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ryan Goodfellow", email = "ry@oxide.computer" }]
requires-python = ">=3.9"
license.text = "MPL-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/oxidecomputer/tree-sitter-rsf"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
